Changes in version: randomNames_0.0-7

  o Changed randomNamesData to environment

Changes in version: randomNames_0.0-6

  o Changed DESCRIPTION to Import data.table

Changes in version: randomNames_0.0-5

  o Fixed key to accomodate changes in data.table 1.7.8.

Changes in version: randomNames_0.0-4

  o Added NAMESPACE.

Changes in version: randomNames_0.0-3

  o Modified function to adapt to improvements in data.table.

Changes in version: randomNames_0.0-2

  o Refined function to recode supplied gender and ethnicity argument/variables if not in function appropriate form.

Changes in version: randomNames_0.0-1

  o Package Released.