@@ -1,20 +1,20 @@
 Package: randomNames
-Version: 0.1-0
-Date: 2015-7-23
+Version: 0.2-0
+Date: 2016-9-9
 Title: Function for Generating Random Names and a Dataset
 Depends: R (>= 2.10.0)
 Imports: data.table (>= 1.8.0)
 Author: Damian W. Betebenner <dbetebenner@nciea.org>
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
-Description: Function for generating random gender and ethnicity correct first and/or last names. Names are chosen proportionally based upon their probability of appearing in a large scale data base of real names.  
+Description: Function for generating random gender and ethnicity correct first and/or last names. Names are chosen proportionally based upon their probability of appearing in a large scale data base of real names.
 URL: https://github.com/CenterForAssessment/randomNames,
-        http://cran.r-project.org/package=randomNames
+        https://cran.r-project.org/package=randomNames
 BugReports: https://github.com/CenterForAssessment/randomNames/issues
 LazyLoad: Yes
 LazyData: Yes
 ByteCompile: TRUE
 License: GPL-3
 NeedsCompilation: no
-Packaged: 2015-07-23 16:50:34 UTC; damian
+Packaged: 2016-09-09 19:42:23 UTC; damian
 Repository: CRAN
-Date/Publication: 2015-07-24 07:54:08
+Date/Publication: 2016-09-09 23:48:36
